--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ on:
   workflow_dispatch:
 
 env:
-  POSTGRESQL_DB: postgres
-  POSTGRESQL_USER: seidtech
-  POSTGRESQL_PASSWORD: mancity00PLT
+  POSTGRESQL_DB: seidtech
+  POSTGRESQL_USER: postgres
+  POSTGRESQL_PASSWORD: password
   JAVA_VERSION: 17
 
 jobs:
