--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,8 @@ jobs:
           java-version: ${{ env.JAVA_VERSION }}
       - name: Build Number
         id: build-number
-        run: echo "::set-output name=BUILD_NUMBER::$(date '+%-d.%-m.%Y.%-H.%-M.%-S')"
+        run: echo "{BUILD_NUMBER}={$(date '+%-d.%-m.%Y.%-H.%-M.%-S')}" >> $GITHUB_OUTPUT
+        #run: echo "::set-output name=BUILD_NUMBER::$(date '+%-d.%-m.%Y.%-H.%-M.%-S')"
       - name: Docker Login
         uses: docker/login-action@f3364599c6aa293cdc2b8391b1b56d0c30e45c8a
         with:
