--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ env:
   # Java
   JAVA_VERSION: 17
   # DockerHub
-  DOCKER_HUB_USERNAME: sredi
+  #DOCKER_HUB_USERNAME: sredi
   # AWS & Elastic Bean Stalk
   AWS_REGION: us-east-2
   EB_ENVIRONMENT_NAME: Springbootreactfullstack-env-1
