--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,8 @@ on:
 env:
   # Postgres
   POSTGRESQL_DB: seidtech
-  POSTGRESQL_USER: seidtech
-  POSTGRESQL_PASSWORD: mancity00PLT
+  POSTGRESQL_USER: postgres
+  POSTGRESQL_PASSWORD: password
   # Java
   JAVA_VERSION: 17
   # DockerHub
