--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,10 @@ on:
 
   workflow_dispatch:
   
-permissions:
-  id-token: write
-  contents: read
+# permissions:
+  #id-token: write
+  #contents: write
+  #packages: write
   
 env:
   # Postgres
@@ -74,7 +75,12 @@ jobs:
           git config user.email github-actions@github.com
           git add elasticbeanstalk/docker-compose.yml
           git commit -m "new app version: ${BUILD_NUMBER}"
-          git push
+          
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
           
       - name: Configure AWS creditials
         uses: aws-actions/configure-aws-credentials@v2
