--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Configure AWS creditials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::943395628474:role/github_actions
+          role-to-assume: arn:aws:iam::943395628474:role/OIDC_Link_EB_deployment
           role-session-name: ElasticBeanstalkDeployment
           aws-region: ${{ env.AWS_REGION }}
           
