--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,7 +101,11 @@ jobs:
          --source-bundle S3Bucket=${{ env.BUCKET_NAME }},S3Key=docker-compose.yml \
          --version-label "ver-${{ github.sha }}" \
          --description "commit-sha-${{ github.sha }}"
-      
+         
+      - name: Deploy new ElasticBeanstalk Application Version
+        run: |
+             aws elasticbeanstalk update-environment \
+             --environment-name ${{env.EB_ENVIRONMENT_NAME}} --version-label "ver-${{ github.sha }}"
       
       
       
