--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
 spring.datasource.url= \
-  jdbc:postgresql://awseb-e-npmwxdepmj-stack-awsebrdsdatabase-a7cacmimsu0r.cx3lklzvpt01.us-east-2.rds.amazonaws.com:5432/seidtech
+  jdbc:postgresql://awseb-e-npmwxdepmj-stack-awsebrdsdatabase-\
+  a7cacmimsu0r.cx3lklzvpt01.us-east-2.rds.amazonaws.com:5432/seidtech
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username= seidtech
 spring.datasource.password= mancity00PLT
 spring.jpa.hibernate.ddl-auto=update
